--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,7 @@
           <div class="header__inner">
             <div class="header__left">
               <a href="./index.html" class="header__logo logo-top">
-                <img class="logo" src="../images/logo.jpeg" alt="" />
+                <img class="logo" src=".../images/logo.jpeg" alt="" />
                 <div class="logo-top__text">
                   <span>компания</span>
                   Евроокна
@@ -104,22 +104,22 @@
                 </div>
               </form> -->
               <!-- <div class="top__inner-gift">
-                <img src="./images/gift.svg" alt="" class="gift" />Подоконник в
+                <img src="../images/gift.svg" alt="" class="gift" />Подоконник в
                 подарок
               </div> -->
             </div>
             <!-- <div class="top__right">
               <div class="top__right-inner">
                 <div class="top__right-item">
-                  <img src="./images/top-clean.svg" class="top__right-img" />
+                  <img src="../images/top-clean.svg" class="top__right-img" />
                   <div class="top__right-text">Бесплатный вывоз мусора</div>
                 </div>
                 <div class="top__right-item">
-                  <img src="./images/ziro.svg" class="top__right-img" />
+                  <img src="../images/ziro.svg" class="top__right-img" />
                   <div class="top__right-text">Рассрочка</div>
                 </div>
                 <div class="top__right-item">
-                  <img src="./images/top-r.svg" class="top__right-img" />
+                  <img src="../images/top-r.svg" class="top__right-img" />
                   <div class="top__right-text">Бесплатный замер</div>
                 </div>
               </div>
@@ -128,7 +128,7 @@
             <div class="top__right">
               <div class="top__right-inner">
                 <div class="top__right-item">
-                  <img src="./images/window.svg" class="top__right-img" />
+                  <img src="../images/window.svg" class="top__right-img" />
                   <div class="top__right-text">
                     ОКНО <br />
                     <span>(1260x1370)</span>
@@ -136,7 +136,7 @@
                   <div class="top__right-price">5280 руб.</div>
                 </div>
                 <div class="top__right-item">
-                  <img src="./images/key.svg" class="top__right-img" />
+                  <img src="../images/key.svg" class="top__right-img" />
                   <div class="top__right-text">
                     ПОД КЛЮЧ <br />
                     11000 руб.
@@ -164,7 +164,7 @@
                   href="https://web.telegram.org/a/#6371417943"
                   class="tg__link"
                 >
-                  <img src="./images/tg.svg" alt="tg" class="tg__img" />
+                  <img src="../images/tg.svg" alt="tg" class="tg__img" />
                   присоединиться
                 </a>
               </div>
@@ -224,7 +224,7 @@
         <div class="container-my">
           <div class="footer__inner">
             <a href="./index.html" class="header__logo logo-top">
-              <img class="logo" src="./images/logo.jpeg" alt="" />
+              <img class="logo" src="../images/logo.jpeg" alt="" />
             </a>
           </div>
         </div>
