--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,7 @@
           <div class="header__inner">
             <div class="header__left">
               <a href="./index.html" class="header__logo logo-top">
-                <img class="logo" src=".../images/logo.jpeg" alt="" />
+                <img class="logo" src="../images/logo.jpeg" alt="" />
                 <div class="logo-top__text">
                   <span>компания</span>
                   Евроокна
