--- a/pages/index.html
+++ b/pages/index.html
@@ -14,11 +14,12 @@
     />
     <link rel="stylesheet" href="../reset.css" />
     <link rel="stylesheet" href="../main.css" />
+    <link rel="icon" href="../images/logo.jpeg" />
     <script
       type="text/javascript"
       src="https://vk.com/js/api/openapi.js?168"
     ></script>
-    <title>Title</title>
+    <title>Evrookna</title>
     <script type="text/javascript">
       window.dgSocialWidgetData = {
         widgetId: "857927e6-5728-420c-9005-a706a59a9c53",
