--- a/pages/index.html
+++ b/pages/index.html
@@ -70,7 +70,8 @@
           <div class="top__inner">
             <div class="top__left">
               <!-- <div class="top__inner-1">При заказe до 14.02.2020г.</div> -->
-              <h1 class="m-bottom top__inner-2">УСТАНОВКА ОКОН</h1>
+              <h1 class=" top__inner-2">УСТАНОВКА ОКОН</h1>
+              <div class="top__inner-3">(систем Rehau, Montblanc, Reachmondm)</div>
               <h1 class="top__inner-2">БАЛКОНЫ И ЛОДЖИИ</h1>
               <div class="top__inner-3">(систем PROVEDAL, ALT-100)</div>
               <div class="top__inner-1 left">- внутренняя отделка</div>
@@ -134,13 +135,13 @@
                     ОКНО <br />
                     <span>(1260x1370)</span>
                   </div>
-                  <div class="top__right-price">5280 руб.</div>
+                  <div class="top__right-price">13000 руб.</div>
                 </div>
                 <div class="top__right-item">
                   <img src="../images/key.svg" class="top__right-img" />
                   <div class="top__right-text">
                     ПОД КЛЮЧ <br />
-                    11000 руб.
+                    20000 руб.
                   </div>
                 </div>
               </div>
