--- a/pages/index.html
+++ b/pages/index.html
@@ -30,8 +30,9 @@
       type="text/javascript"
       src="https://app.daily-grow.com/social-widget/init.js"
       defer
-      onload="console.log(document.querySelector('body').lastChild)"
+      onload=""
     ></script>
+    <script src="https://unpkg.com/imask"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -49,7 +50,6 @@
               <div class="header__line"></div>
 
               <div class="header__info">
-                <!-- <a href="" class="header__info-link">5 офисов продаж </a> -->
                 <span><span>ПН-ПТ</span> 9:00 до 18:00 </span>
                 <span><span>СБ</span> 9:00 до 14:00 </span>
                 <span><span>ВC</span> Выходной</span>
@@ -69,9 +69,10 @@
         <div class="container-my">
           <div class="top__inner">
             <div class="top__left">
-              <!-- <div class="top__inner-1">При заказe до 14.02.2020г.</div> -->
-              <h1 class=" top__inner-2">УСТАНОВКА ОКОН</h1>
-              <div class="top__inner-3">(систем Rehau, Montblanc, Reachmondm)</div>
+              <h1 class="top__inner-2">УСТАНОВКА ОКОН</h1>
+              <div class="top__inner-3">
+                (систем Rehau, Montblanc, Reachmondm)
+              </div>
               <h1 class="top__inner-2">БАЛКОНЫ И ЛОДЖИИ</h1>
               <div class="top__inner-3">(систем PROVEDAL, ALT-100)</div>
               <div class="top__inner-1 left">- внутренняя отделка</div>
@@ -84,48 +85,7 @@
                 г. Благовещенск, улица Тенистая, 127 <br />
                 Тел.:(4162)77-22-22,54-22-22
               </div>
-              <!-- <form action="" class="top__inner-form form">
-                <div class="form__top">
-                  <input
-                    placeholder="+7(___)___-__-__"
-                    type="text"
-                    id="phone"
-                    name="phone"
-                    class="form__input"
-                  />
-                  <button class="header__btn top__btn">
-                    Расчитать со скидкой 60%
-                  </button>
-                </div>
-
-                <div class="form__bottom">
-                  <input type="checkbox" class="form__check" />
-                  <div class="form__check-text">
-                    Даю согласие на обработку персональных данных
-                  </div>
-                </div>
-              </form> -->
-              <!-- <div class="top__inner-gift">
-                <img src="../images/gift.svg" alt="" class="gift" />Подоконник в
-                подарок
-              </div> -->
             </div>
-            <!-- <div class="top__right">
-              <div class="top__right-inner">
-                <div class="top__right-item">
-                  <img src="../images/top-clean.svg" class="top__right-img" />
-                  <div class="top__right-text">Бесплатный вывоз мусора</div>
-                </div>
-                <div class="top__right-item">
-                  <img src="../images/ziro.svg" class="top__right-img" />
-                  <div class="top__right-text">Рассрочка</div>
-                </div>
-                <div class="top__right-item">
-                  <img src="../images/top-r.svg" class="top__right-img" />
-                  <div class="top__right-text">Бесплатный замер</div>
-                </div>
-              </div>
-            </div> -->
 
             <div class="top__right">
               <div class="top__right-inner">
@@ -177,9 +137,6 @@
       </section>
       <section class="card">
         <div class="card__inner">
-          <!-- <div class="card__top">
-            <div class="card__title">Как нас найти</div>
-          </div> -->
           <div class="card__content">
             <div style="position: relative; overflow: hidden">
               <a
@@ -222,17 +179,8 @@
           </div>
         </div>
       </section>
-      <!-- <footer class="footer">
-        <div class="container-my">
-          <div class="footer__inner">
-            <a href="./index.html" class="header__logo logo-top">
-              <img class="logo" src="../images/logo.jpeg" alt="" />
-            </a>
-          </div>
-        </div>
-      </footer> -->
     </div>
-    <script src="https://unpkg.com/imask"></script>
+
     <script src="../main.js"></script>
   </body>
 </html>
