--- a/pages/index.html
+++ b/pages/index.html
@@ -75,7 +75,9 @@
               </div>
               <h1 class="top__inner-2">БАЛКОНЫ И ЛОДЖИИ</h1>
               <div class="top__inner-3">(систем PROVEDAL, ALT-100)</div>
-              <div class="top__inner-1 left">- внутренняя отделка</div>
+              <div class="top__inner-1 left">
+                - внутренняя отделка помещений
+              </div>
               <div class="top__inner-1 left">
                 - металлопластиковые окна и двери
               </div>
@@ -101,7 +103,16 @@
                   <img src="../images/key.svg" class="top__right-img" />
                   <div class="top__right-text">
                     ПОД КЛЮЧ <br />
-                    20000 руб.
+                    <div class="top__right-price">20000 руб.</div>
+                  </div>
+                </div>
+                <div class="top__right-item">
+                  <img src="../images/work.svg" class="top__right-img" />
+                  <div class="top__right-text">
+                    ОПЫТ РАБОТЫ <br />
+                    
+                    <div class="top__right-price">более 15 лет</div>
+                    <span>(работаем с госзакупками)</span>
                   </div>
                 </div>
               </div>
