--- a/pages/index.html
+++ b/pages/index.html
@@ -76,7 +76,7 @@
               <h1 class="top__inner-2">БАЛКОНЫ И ЛОДЖИИ</h1>
               <div class="top__inner-3">(систем PROVEDAL, ALT-100)</div>
               <div class="top__inner-1 left">
-                - внутренняя отделка помещений
+                - отделка фасадов и кровельные работы
               </div>
               <div class="top__inner-1 left">
                 - металлопластиковые окна и двери
