--- a/pages/index.html
+++ b/pages/index.html
@@ -110,7 +110,7 @@
                   <img src="../images/work.svg" class="top__right-img" />
                   <div class="top__right-text">
                     ОПЫТ РАБОТЫ <br />
-                    
+
                     <div class="top__right-price">более 15 лет</div>
                     <span>(работаем с госзакупками)</span>
                   </div>
@@ -132,16 +132,18 @@
             <div class="widget__content">
               <div class="widget__item tg">
                 <div class="tg__title">Мы в Телеграм</div>
-                <a
-                  target="_blank"
-                  href="https://web.telegram.org/a/#6371417943"
+
+                <button
+                  id="openTelegram"
                   class="tg__link"
                 >
                   <img src="../images/tg.svg" alt="tg" class="tg__img" />
                   присоединиться
-                </a>
+              </button>
               </div>
-              <div class="widget__item whatsapp"></div>
+              <div id="openWhatsApp" class="widget__item whatsapp">
+          
+              </div>
             </div>
           </div>
         </div>
