--- a/pages/index.html
+++ b/pages/index.html
@@ -57,10 +57,10 @@
             </div>
 
             <div class="header__right">
-              <button class="header__works-btn mb20">Наши работы</button>
+              <button id="openTelegram" class="header__works-btn mb20">Наши работы</button>
               <div class="header__works">
                 <div class="header__phone">8 962 284 22 22</div>
-                <button class="header__works-btn">Заказать звонок</button>
+                <button id="openTelegram" class="header__works-btn">Заказать звонок</button>
                 <a href="./calc.html" class="header__works-btn">Калькулятор</a>
               </div>
             </div>
@@ -146,7 +146,7 @@
                   <p size="14" class="about__text">Круглосуточно, бесплатно</p>
                 </div>
                 <div class="about__right">
-                  <form action="#" class="about__form">
+                  <div class="about__form">
                     <input
                     placeholder="Ваш город"
                     type="text"
@@ -167,10 +167,10 @@
                       value=""
                     />
 
-                    <button class="header__works-btn about-btn">
+                    <button id="openTelegram" class="header__works-btn about-btn">
                       Получить консультацию
                     </button>
-                  </form>
+                  </div>
                 </div>
               </div>
             </div>
