--- a/pages/calc.html
+++ b/pages/calc.html
@@ -1142,7 +1142,7 @@
                       </svg>
                     </div>
                     <div class="calc__img-wrapp">
-                      <img id="calc__img" class="calc__img" src="" alt="" />
+                      <img id="calc__img" class="calc__img" src="../calc_imgages/one.png" alt="" />
                       <div class="right">
                         <div class="right-number"></div>
                         <div class="mm">мм</div>
