--- a/pages/calc.html
+++ b/pages/calc.html
@@ -1142,7 +1142,17 @@
                       </svg>
                     </div>
                     <div class="calc__img-wrapp">
-                      <img id="calc__img" class="calc__img" src="../calc_imgages/one.png" alt="" />
+                      <div class="big-images">
+                        <img  id="one" class="calc__img" src="../calc_imgages/one.png" alt="" />
+                        <img  id="two" class="calc__img" src="../calc_imgages/two.png" alt="" />
+                        <img  id="three" class="calc__img" src="../calc_imgages/three.png" alt="" />
+                        <img  id="four" class="calc__img" src="../calc_imgages/four.png" alt="" />
+                        <img  id="arc" class="calc__img" src="../calc_imgages/arc.png" alt="" />
+                        <img  id="d" class="calc__img" src="../calc_imgages/d2.png" alt="" />
+                        <img  id="d2" class="calc__img" src="../calc_imgages/d2.png" alt="" />
+                        <img  id="d3" class="calc__img" src="../calc_imgages/d3.png" alt="" />
+                      </div>
+                 
                       <div class="right">
                         <div class="right-number"></div>
                         <div class="mm">мм</div>
@@ -1161,11 +1171,11 @@
                         <div class="calc__content">
                           <button
                             type="button"
-                       
+
                             data-title="Одностворчатое окно"
                             id="one"
                             name="one"
-                            class="calc__item"
+                            class="calc__item start-btn"
                           >
                             <svg
                               width="60"
